--- a/index.html
+++ b/index.html
@@ -22,12 +22,26 @@
           <button>Get Started</button>
         </div>
         <div class="column-right">
-          <img
-            src="./image-1.svg"
-            alt="illustration"
-            class="hero-image"
-          />
-        </div>
+            <img
+              src="./person.png"
+              alt="illustration"
+              class="hero-image"
+            />
+          </div>
+          <div class="column-right">
+            <img
+              src="./digital.png"
+              alt="illustration"
+              class="hero-image"
+            />
+          </div>
+          <div class="column-right">
+            <img
+              src="./globe.png"
+              alt="illustration"
+              class="hero-image"
+            />
+          </div>
       </div>
     </section>
   </body>
