extra content commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <div class="logo">SEND</div>
       <div class="nav-items">
-        <a href="/">Home</a> <a href="/">Physical Security</a> <a href="/">Digital Security</a> <a href="/">Communications</a>
+        <a href="/">Home</a> <a href="./physicalSecurity.html">Physical Security</a> <a href="/">Digital Security</a> <a href="/">Communications</a>
       </div>
     </nav>
     <section class="hero">
