further content additions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <div class="logo">SEND</div>
       <div class="nav-items">
-        <a href="/">Home</a> <a href="./physicalSecurity.html">Physical Security</a> <a href="/">Digital Security</a> <a href="/">Communications</a>
+        <a href="/">Home</a> <a href="./physicalSecurity.html">Physical Security</a> <a href="./digitalSecurity.html">Digital Security</a> <a href="./communications.html">Communications</a>
       </div>
     </nav>
     <section class="hero">
@@ -23,25 +23,19 @@
           <button>Get Started</button>
         </div>
         <div class="column-right">
-            <img
-              src="./person.png"
-              alt="illustration"
-              class="hero-image"
-            />
+            <a href="./physicalSecurity.html" title="Physical Security">
+                <img src="./person.png" alt="illustration" class="hero-image" />
+            </a>
           </div>
           <div class="column-right">
-            <img
-              src="./digital.png"
-              alt="illustration"
-              class="hero-image"
-            />
+            <a href="./digitalSecurity" title="Digital Security">
+            <img src="./digital.png" alt="illustration" class="hero-image"/>
+            </a>
           </div>
           <div class="column-right">
-            <img
-              src="./globe.png"
-              alt="illustration"
-              class="hero-image"
-            />
+            <a href="./communications.html" title="Communications">
+                <img src="./globe.png" alt="illustration" class="hero-image"/>
+                </a>
           </div>
       </div>
     </section>
