--- a/physicalSecurity.html
+++ b/physicalSecurity.html
@@ -10,15 +10,19 @@
     <nav>
       <div class="logo">SEND</div>
       <div class="nav-items">
-        <a href="/">Home</a> <a href="./physicalSecurity.html">Physical Security</a> <a href="/">Digital Security</a> <a href="/">Communications</a>
+        <a href="/">Home</a> <a href="./physicalSecurity.html">Physical Security</a> <a href="./digitalSecurity.html">Digital Security</a> <a href="./communications.html">Communications</a>
       </div>
     </nav>
     <section class="hero">
       <div class="hero-container">
         <div class="column-left">
-            <h1>Laptop Security</h1>
-            <p><strong>Laptops and desktops hold sensitive information that can be accessed if someone gains physical access to the device. It is important to secure these devices with strong passwords and enable auto lock features. Encrypting the data on the device can further enhance security. Biometrics should not be solely relied upon for device authentication. Disabling USB ports and being cautious when using someone else's computer are additional security measures to consider.</strong></p>
-            <h2><strong>Highlights</strong></h2>
+            <h1>Physical Security</h1>
+
+            <h2>Laptop Security</h2>
+            <p>Laptops and desktops hold sensitive information that can be accessed if someone gains physical access to the device. 
+                It is important to secure these devices with strong passwords and enable auto lock features. Encrypting the data on the device can further enhance security. 
+                Biometrics should not be solely relied upon for device authentication. Disabling USB ports and being cautious when using someone else's computer are additional security measures to consider.</p>
+            <h3><strong>Highlights</strong></h3>
             <ul>
                 <li><strong>💻 Strong Password:</strong> Put a strong password on your laptop or desktop to prevent unauthorized access.</li>
                 <li><strong>🔐 Longer Passwords:</strong> Longer passwords are stronger and more difficult to crack.</li>
@@ -30,9 +34,12 @@
                 <li><strong>⚠️ Keylogger Caution:</strong> Be cautious when using someone else's computer, as there may be keyloggers that record your keystrokes.</li>
             </ul>
             
-            <h1>Phone Security</h1>
-            <p><strong>Phone security is important as our phones carry a lot of sensitive information, such as private photos and sensitive documents. Phones are becoming more powerful and like mini PCs, so it's crucial to protect them. Setting a password or pin code is the first step, and using a long pin code or a combination of pin code and fingerprint is recommended. Encrypting our phones is also important and most phones come with this feature enabled. Locking the SIM card and enabling Smart Lock on Android can further enhance security. Guest mode is useful when sharing the phone with others. When charging the phone, it is advised to use your own charger and avoid public chargers to prevent data theft. Finally, it is recommended to know how to remotely wipe your phone in case it gets lost or stolen.</strong></p>
-            <h2><strong>Highlights</strong></h2>
+            <h2>Phone Security</h2>
+            <p>Phone security is important as our phones carry a lot of sensitive information, such as private photos and sensitive documents. 
+                Phones are becoming more powerful and like mini PCs, so it's crucial to protect them. Setting a password or pin code is the first step, and using a long pin code or a combination of pin code and fingerprint is recommended. 
+                Encrypting our phones is also important and most phones come with this feature enabled. Locking the SIM card and enabling Smart Lock on Android can further enhance security. Guest mode is useful when sharing the phone with others. 
+                When charging the phone, it is advised to use your own charger and avoid public chargers to prevent data theft. Finally, it is recommended to know how to remotely wipe your phone in case it gets lost or stolen.</p>
+            <h3><strong>Highlights</strong></h3>
             <ul>
                 <li><strong>📱 Sensitive Information:</strong> Phone security is crucial as they carry sensitive information.</li>
                 <li><strong>🔒 Password Protection:</strong> Setting a password or pin code is the first step in protecting the phone.</li>
@@ -44,11 +51,12 @@
                 <li><strong>❌ Remote Wipe:</strong> Know how to remotely wipe your phone in case it gets lost or stolen.</li>
             </ul>
 
-        <h1>Device Wiping Summary</h1>
-        <p>Wiping your device is important to protect your data when trading, recycling, or giving it away. Attackers can easily access your personal information from old devices. 
+        <h2>Device Wiping Summary</h2>
+        <p>Wiping your device is important to protect your data when trading, recycling, or giving it away. 
+            Attackers can easily access your personal information from old devices. 
             Disconnecting your account and doing a factory reset is essential. Hard drives can be destroyed or wiped using tools. 
             Consider your threat model and never give away a device without wiping it clean.</p>
-            <h2><strong>Highlights</strong></h2>
+            <h3><strong>Highlights</strong></h3>
             <ul>
                 <li><strong>📱 Wiping your device:</strong> Wiping your device is important to protect your data when trading, recycling, or giving it away. Attackers can easily access your personal information from old devices.</li>
                 <li><strong>🔒 Disconnecting your account and doing a factory reset:</strong> Disconnecting your account and doing a factory reset is essential. Hard drives can be destroyed or wiped using tools. Consider your threat model and never give away a device without wiping it clean.</li>
@@ -56,9 +64,9 @@
                 <li><strong>🤔 Consider your threat model:</strong> Consider your threat model and never give away a device without wiping it clean.</li>
             </ul>
         
-        <h1>Other Summary</h1>
+        <h2>Other Security Tips</h2>
         <p>This section provides tips for keeping your data secure, including shredding documents, using a safe, securing printers, and securing Internet of Things devices.</p>
-        <h2><strong>Highlights</strong></h2>
+        <h3><strong>Highlights</strong></h3>
         <ul>
             <li><strong>📄 Shredding documents:</strong> Shredding documents is important to ensure that sensitive information cannot be accessed or recreated.</li>
             <li><strong>🔒 Using a safe:</strong> Storing important physical documents in a fireproof safe adds an extra layer of protection.</li>
