styling and structure

--- a/digitalSecurity.html
+++ b/digitalSecurity.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <nav>
-      <div class="logo">SEND</div>
+        <div class="logo">
+            <img src="logo.png">
+        </div>
       <div class="nav-items">
         <a href="/">Home</a> <a href="./physicalSecurity.html">Physical Security</a> <a href="./digitalSecurity.html">Digital Security</a> <a href="./communications.html">Communications</a>
       </div>
@@ -72,7 +74,7 @@
                 Consider your threat model and privacy concerns when choosing a backup solution.</p>
             <h3>Highlights</h3>
             <ul>
-                <li>🔒 Backups are crucial for defending against ransomware attacks and data loss.</li>
+                <li>💽 Backups are crucial for defending against ransomware attacks and data loss.</li>
                 <li>💾 Automatic backups are available for certain devices, but limited storage may require additional purchases.</li>
                 <li>☁️ Cloud backup services offer convenience and accessibility, but encrypted options may sacrifice convenience and features.</li>
                 <li>📁 Manual backups to external drives are an alternative for those concerned about privacy and security.</li>
@@ -92,11 +94,8 @@
                 <li>📥 Use trusted sources, like Google Play Store and Apple's App Store, to download apps and avoid sideloading from untrusted sources.</li>
             </ul>
   
-            <button>Get Started</button>
           </div>
           <div class="column-right">
-            </div>
-            
             <a href="./digitalSecurity" title="Digital Security">
                 <img src="./digital.png" alt="illustration" class="hero-image"/>
                 </a>
