--- a/physicalSecurity.html
+++ b/physicalSecurity.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <nav>
-      <div class="logo">SEND</div>
+        <div class="logo">
+            <img src="logo.png">
+        </div>
       <div class="nav-items">
         <a href="/">Home</a> <a href="./physicalSecurity.html">Physical Security</a> <a href="./digitalSecurity.html">Digital Security</a> <a href="./communications.html">Communications</a>
       </div>
@@ -59,7 +61,7 @@
             <h3><strong>Highlights</strong></h3>
             <ul>
                 <li><strong>📱 Wiping your device:</strong> Wiping your device is important to protect your data when trading, recycling, or giving it away. Attackers can easily access your personal information from old devices.</li>
-                <li><strong>🔒 Disconnecting your account and doing a factory reset:</strong> Disconnecting your account and doing a factory reset is essential. Hard drives can be destroyed or wiped using tools. Consider your threat model and never give away a device without wiping it clean.</li>
+                <li><strong>↻ Disconnecting your account and doing a factory reset:</strong> Disconnecting your account and doing a factory reset is essential. Hard drives can be destroyed or wiped using tools. Consider your threat model and never give away a device without wiping it clean.</li>
                 <li><strong>🛠️ Hard drives can be destroyed or wiped using tools:</strong> Hard drives can be destroyed or wiped using tools to secure your data.</li>
                 <li><strong>🤔 Consider your threat model:</strong> Consider your threat model and never give away a device without wiping it clean.</li>
             </ul>
@@ -77,19 +79,12 @@
             <li><strong>💡 Power-saving measures:</strong> Turning off printers when not in use saves electricity and reduces the risk of unauthorized access.</li>
         </ul>
 
-        
-
-          <button>Get Started</button>
         </div>
         <div class="column-right">
-          </div>
-          
-          <img
-              src="./person.png"
-              alt="illustration"
-              class="hero-image"
-            />
-      </div>
+            <a href="./communications.html" title="Communications">
+                    <img src="./globe.png" alt="illustration" class="hero-image"/>
+                    </a>
+              </div>
     </section>
   </body>
 </html>
