More styling and sliders

--- a/index.html
+++ b/index.html
@@ -3,44 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn about the fundamentals of security, including physical and digital security measures, secure communication practices, and more.">
+    <meta name="keywords" content="security, basics, physical security, digital security, communications, internet, privacy, encryption, cyber security">
     <title>Security Basics</title>
     <link rel="stylesheet" type="text/css" href="indexStyle.css">
 </head>
 <body>
     <nav>
-        <div class="logo">
-            <img src="logo.png">
-        </div>
-      <div class="nav-items">
-        <a href="/">Home</a> <a href="./physicalSecurity.html">Physical Security</a> <a href="./digitalSecurity.html">Digital Security</a> <a href="./communications.html">Communications</a>
+      <div class="logo">
+        <a href="./index.html"><img src="logo.png" alt="Logo"></a>
       </div>
+        <div class="nav-items">
+            <a href="/">Home</a> <a href="./physicalSecurity.html">Physical Security</a> <a href="./digitalSecurity.html">Digital Security</a> <a href="./communications.html">Communications</a>
+        </div>
     </nav>
     <section class="hero">
         <div class="hero-container">
             <div class="column-left">
-              <h1>Personal Technical Security</h1>
-              <p>A concise guide to enhancing your safety in the digital world.</p>
+                <h1>Personal Technical Security</h1>
+                <p>This course is designed to offer comprehensive personal, technical, and security guidance, empowering individuals to navigate the online world securely.<br>
+                  Dr. Mike's goal in creating this course is to address common security concerns, providing recommendations on tools and practices to bolster digital safety.</p>
             </div>
             <!-- Images and Sections-->
-          <div class="hero-section" id="physical">
-            <img src="./person.png" alt="Physical Security" class="hero-image" />
-          </div>
-          <h2>Physical Security</h2>
-            <a href="./physicalSecurity.html" class="button">Get Started</a>
-
-          <div class="hero-section" id="digital">
-            <img src="./digital.png" alt="Digital Security" class="hero-image" />
-          </div>
-          <h2>Digital Security</h2>
-            <a href="./digitalSecurity.html" class="button">Get Started</a>
-            
-          <div class="hero-section" id="communications">
-            <img src="./globe.png" alt="Communications" class="hero-image" />
-          </div>
-          <h2>Communications</h2>
-            <a href="./communications.html" class="button">Get Started</a>
-          </div>
-
+            <div class="hero-section" id="physical">
+                <img src="./person.png" alt="Physical Security" class="hero-image" />
+                <h2>Physical Security</h2>
+                <a href="./physicalSecurity.html" class="button">Get Started</a>
+            </div>
+            <div class="hero-section" id="digital">
+                <img src="./digital.png" alt="Digital Security" class="hero-image" />
+                <h2>Digital Security</h2>
+                <a href="./digitalSecurity.html" class="button">Get Started</a>
+            </div>
+            <div class="hero-section" id="communications">
+                <img src="./globe.png" alt="Communications" class="hero-image" />
+                <h2>Communications</h2>
+                <a href="./communications.html" class="button">Get Started</a>
+            </div>
+        </div>
     </section>
-  </body>
+</body>
 </html>
