--- a/digitalSecurity.html
+++ b/digitalSecurity.html
@@ -3,103 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore digital security strategies to safeguard your online presence from cyber threats and privacy breaches.">
+    <meta name="keywords" content="digital security, cybersecurity, data encryption, password management, two-factor authentication">
     <title>Security Basics</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="slider.css">
 </head>
 <body>
     <nav>
         <div class="logo">
-            <img src="logo.png">
+            <a href="./index.html"><img src="logo.png" alt="Logo"></a>
         </div>
-      <div class="nav-items">
-        <a href="/">Home</a> <a href="./physicalSecurity.html">Physical Security</a> <a href="./digitalSecurity.html">Digital Security</a> <a href="./communications.html">Communications</a>
-      </div>
+        <div class="nav-items">
+            <a href="/">Home</a> 
+            <a href="./physicalSecurity.html">Physical Security</a> 
+            <a href="./digitalSecurity.html">Digital Security</a> 
+            <a href="./communications.html">Communications</a>
+        </div>
     </nav>
     <section class="hero">
         <div class="hero-container">
-          <div class="column-left">
-            <h1>Digital Security</h1>
-
-  
-            <h2>Password Security</h2>
-            <p>In this section discusses the importance of password security and recommends the use of a password manager. They also highlight the benefits of using an authenticator app for two-factor authentication.</p>
-            <h3>Highlights</h3>
-            <ul>
-                <li>🔐 Password Managers: Password managers are essential for securely storing and managing multiple passwords.</li>
-                <li>🔒 Bit Warden: Bit Warden is a recommended password manager that offers strong encryption and complies with privacy regulations.</li>
-                <li>🔑 Password Generation: Password managers allow for the generation of long and complex passwords, as well as syncing across devices.</li>
-                <li>🔓 Two-factor Authentication: Two-factor authentication, using an authenticator app like Authy, adds an extra layer of security to your accounts.</li>
-                <li>📱 Authenticator Apps: Authenticator apps are more secure than SMS-based authentication, as texts can be intercepted.</li>
-                <li>👁️‍🗨️ Biometrics: Biometrics can be used as an additional factor for authentication, but it is recommended to combine it with a password and authenticator app.</li>
-                <li>🛡️ Combined Security Measures: Using a password manager and enabling two-factor authentication helps protect sensitive information and ensures unique passwords for each account.</li>
-            </ul>
-
-            <h2>Browser Security</h2>
-            <p>Browser security is important to ensure the safety of our browsing experience. 
-                Different browsers have their own security settings that can be customized to enhance protection. 
-                It is recommended to review and adjust permissions granted to websites to ensure privacy and avoid intrusive access. 
-                Additional security measures such as enabling HTTPS-only mode and disabling data collection can further enhance browser security.</p>
-            <h3>Highlights</h3>
-            <ul>
-                <li>🛡️ Customize browser security settings to enhance protection.</li>
-                <li>🚫 Review and adjust permissions granted to websites to ensure privacy.</li>
-                <li>🔒 Enable HTTPS-only mode for secure browsing.</li>
-                <li>📵 Disable data collection to prevent sending data back to the browser.</li>
-                <li>⚠️ Be cautious when granting camera permissions to websites.</li>
-                <li>🔄 Scale back security settings only if necessary, based on individual threat model.</li>
-                <li>🌐 Consider using Firefox and Tor for enhanced anonymity.</li>
-            </ul>
-
-            <h2>HTTPS and Extensions</h2>
-            <p>This section discusses the importance of HTTPS and browser extensions in keeping browsing safe.</p>
-            <ul>
-                <li>🔒 HTTPS: HTTPS stands for secure browsing, and it is indicated by a lock symbol in the URL bar. 
-                    Most websites now use HTTPS, but smaller websites may not have it. 
-                    It is crucial to use HTTPS when providing sensitive information or making payments online.</li>
-                <li>🌐 Encrypted DNS: DNS translates domain names to IP addresses and can be encrypted to protect privacy. Encrypted DNS services can also block ads and enhance security.</li>
-                <li>🛡️ Browser Extensions: Browser extensions like uBlock Origin, HTTPS Everywhere, and Clean URLs can improve browsing safety by blocking ads and protecting against malicious websites.</li>
-            </ul>
-            <h3>Highlights</h3>
-            <ul>
-                <li>🔒 HTTPS ensures secure browsing and protects sensitive information.</li>
-                <li>🌐 Encrypted DNS enhances privacy and security while browsing.</li>
-                <li>🛡️ Browser extensions can block ads and protect against malicious websites.</li>
-            </ul>
-
-            <h2>Backups</h2>
-            <p>Backups are essential for protecting your data from ransomware attacks, hard drive crashes, and data corruption. 
-                Automatic backups are available for certain devices, but additional storage may need to be purchased. 
-                Cloud backup services offer convenience and accessibility, but manual backups to external drives are also an option. 
-                Encryption options vary, with some cloud services offering encrypted storage but potentially sacrificing convenience and features. 
-                Consider your threat model and privacy concerns when choosing a backup solution.</p>
-            <h3>Highlights</h3>
-            <ul>
-                <li>💽 Backups are crucial for defending against ransomware attacks and data loss.</li>
-                <li>💾 Automatic backups are available for certain devices, but limited storage may require additional purchases.</li>
-                <li>☁️ Cloud backup services offer convenience and accessibility, but encrypted options may sacrifice convenience and features.</li>
-                <li>📁 Manual backups to external drives are an alternative for those concerned about privacy and security.</li>
-                <li>⚠️ Consider your threat model and privacy concerns when choosing a backup solution.</li>
-            </ul>
-
-            <h2>Regular Software Updates</h2>
-            <p>Regularly updating software and apps is crucial for device security and functionality. Updates often occur seamlessly in the background, but manual updates may be required for certain apps. Rebooting devices to install updates is important, as updates provide new features and security patches. Different devices have varying update frequencies, with Apple devices receiving longer support than most Android devices.</p>
-            <h3>Highlights</h3>
-            <ul>
-                <li>💻 Regularly update software and apps on devices for security and new features.</li>
-                <li>🔄 Updates often occur in the background, but manual updates may be necessary.</li>
-                <li>📱 Reboot devices when prompted to install updates for optimum security.</li>
-                <li>🛡️ Updates offer new features and security patches, making devices more secure.</li>
-                <li>📅 Apple devices receive longer support with regular updates compared to most Android devices.</li>
-                <li>💰 Outdated software puts devices at risk, and investing in new devices ensures security and access to the latest updates.</li>
-                <li>📥 Use trusted sources, like Google Play Store and Apple's App Store, to download apps and avoid sideloading from untrusted sources.</li>
-            </ul>
-  
-          </div>
-          <div class="column-right">
-            <a href="./digitalSecurity" title="Digital Security">
-                <img src="./digital.png" alt="illustration" class="hero-image"/>
+            <div class="column-left">
+                <div class="slider-container">
+                    <div class="slider">
+                        <div class="slide">
+                            <h1>Digital Security</h1>
+                            <h2>Password Security</h2>
+                            <p>In this section discusses the importance of password security and recommends the use of a password manager. They also highlight the benefits of using an authenticator app for two-factor authentication.</p>
+                            <h3>Highlights</h3>
+                            <ul>
+                                <li><strong>🔐 Password Managers:</strong> Password managers are essential for securely storing and managing multiple passwords.</li>
+                                <li><strong>🔒 Bit Warden:</strong> Bit Warden is a recommended password manager that offers strong encryption and complies with privacy regulations.</li>
+                                <li><strong>🔑 Password Generation:</strong> Password managers allow for the generation of long and complex passwords, as well as syncing across devices.</li>
+                                <li><strong>🔓 Two-factor Authentication:</strong> Two-factor authentication, using an authenticator app like Authy, adds an extra layer of security to your accounts.</li>
+                                <li><strong>📱 Authenticator Apps:</strong> Authenticator apps are more secure than SMS-based authentication, as texts can be intercepted.</li>
+                                <li><strong>👁️‍🗨️ Biometrics:</strong> Biometrics can be used as an additional factor for authentication, but it is recommended to combine it with a password and authenticator app.</li>
+                                <li><strong>🛡️ Combined Security Measures:</strong> Using a password manager and enabling two-factor authentication helps protect sensitive information and ensures unique passwords for each account.</li>
+                            </ul>
+                        </div>
+                        <div class="slide">
+                            <h1>Digital Security</h1>
+                            <h2>Browser Security</h2>
+                            <p>Browser security is important to ensure the safety of our browsing experience. Different browsers have their own security settings that can be customized to enhance protection. It is recommended to review and adjust permissions granted to websites to ensure privacy and avoid intrusive access. Additional security measures such as enabling HTTPS-only mode and disabling data collection can further enhance browser security.</p>
+                            <h3>Highlights</h3>
+                            <ul>
+                                <li><strong>🛡️ Customize browser security settings:</strong> to enhance protection.</li>
+                                <li><strong>🚫 Review and adjust permissions:</strong> granted to websites to ensure privacy.</li>
+                                <li><strong>🔒 Enable HTTPS-only mode:</strong> for secure browsing.</li>
+                                <li><strong>📵 Disable data collection:</strong> to prevent sending data back to the browser.</li>
+                                <li><strong>⚠️ Be cautious when granting camera permissions:</strong> to websites.</li>
+                                <li><strong>🔄 Scale back security settings:</strong> only if necessary, based on individual threat model.</li>
+                                <li><strong>🌐 Consider using Firefox and Tor:</strong> for enhanced anonymity.</li>
+                            </ul>
+                        </div>
+                        <div class="slide">
+                            <h1>Digital Security</h1>
+                            <h2>HTTPS and Extensions</h2>
+                            <p>This section discusses the importance of HTTPS and browser extensions in keeping browsing safe.</p>
+                            <ul>
+                                <li><strong>🔒 HTTPS:</strong> HTTPS stands for secure browsing, and it is indicated by a lock symbol in the URL bar. Most websites now use HTTPS, but smaller websites may not have it. It is crucial to use HTTPS when providing sensitive information or making payments online.</li>
+                                <li><strong>🌐 Encrypted DNS:</strong> DNS translates domain names to IP addresses and can be encrypted to protect privacy. Encrypted DNS services can also block ads and enhance security.</li>
+                                <li><strong>🛡️ Browser Extensions:</strong> Browser extensions like uBlock Origin, HTTPS Everywhere, and Clean URLs can improve browsing safety by blocking ads and protecting against malicious websites.</li>
+                            </ul>
+                            <h3>Highlights</h3>
+                            <ul>
+                                <li><strong>🔒 HTTPS ensures secure browsing</strong> and protects sensitive information.</li>
+                                <li><strong>🌐 Encrypted DNS enhances privacy</strong> and security while browsing.</li>
+                                <li><strong>🛡️ Browser extensions can block ads</strong> and protect against malicious websites.</li>
+                            </ul>
+                        </div>
+                        <div class="slide">
+                            <h1>Digital Security</h1>
+                            <h2>Backups</h2>
+                            <p>Backups are essential for protecting your data from ransomware attacks, hard drive crashes, and data corruption. Automatic backups are available for certain devices, but additional storage may need to be purchased. Cloud backup services offer convenience and accessibility, but manual backups to external drives are also an option. Encryption options vary, with some cloud services offering encrypted storage but potentially sacrificing convenience and features. Consider your threat model and privacy concerns when choosing a backup solution.</p>
+                            <h3>Highlights</h3>
+                            <ul>
+                                <li><strong>💽 Backups are crucial</strong> for defending against ransomware attacks and data loss.</li>
+                                <li><strong>💾 Automatic backups</strong> are available for certain devices, but limited storage may require additional purchases.</li>
+                                <li><strong>☁️ Cloud backup services</strong> offer convenience and accessibility, but encrypted options may sacrifice convenience and features.</li>
+                                <li><strong>📁 Manual backups to external drives</strong> are an alternative for those concerned about privacy and security.</li>
+                                <li><strong>⚠️ Consider your threat model</strong> and privacy concerns when choosing a backup solution.</li>
+                            </ul>
+                        </div>
+                        <div class="slide">
+                            <h1>Digital Security</h1>
+                            <h2>Regular Software Updates</h2>
+                            <p>Regularly updating software and apps is crucial for device security and functionality. Updates often occur seamlessly in the background, but manual updates may be required for certain apps. Rebooting devices to install updates is important, as updates provide new features and security patches. Different devices have varying update frequencies, with Apple devices receiving longer support than most Android devices.</p>
+                            <h3>Highlights</h3>
+                            <ul>
+                                <li><strong>💻 Regularly update software and apps</strong> on devices for security and new features.</li>
+                                <li><strong>🔄 Updates often occur in the background</strong>, but manual updates may be necessary.</li>
+                                <li><strong>📱 Reboot devices when prompted</strong> to install updates for optimum security.</li>
+                                <li><strong>🛡️ Updates offer new features and security patches</strong>, making devices more secure.</li>
+                                <li><strong>📅 Apple devices receive longer support</strong> with regular updates compared to most Android devices.</li>
+                                <li><strong>💰 Outdated software puts devices at risk</strong>, and investing in new devices ensures security and access to the latest updates.</li>
+                                <li><strong>📥 Use trusted sources</strong>, like Google Play Store and Apple's App Store, to download apps and avoid sideloading from untrusted sources.</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="button-container">
+                        <button class="prev" onclick="prevSlide()">Previous</button>
+                        <button class="next" onclick="nextSlide()">Next</button>
+                    </div>
+                </div>
+            </div>
+            <div class="column-right">
+                <a href="./digitalSecurity" title="Digital Security">
+                    <img src="./digital.png" alt="illustration" class="hero-image"/>
                 </a>
+            </div>
         </div>
-      </section>
-  </body>
+    </section>
+
+    <script src="slider.js" defer></script>
+</body>
 </html>
