More Content and formatting

--- a/digitalSecurity.html
+++ b/digitalSecurity.html
@@ -12,22 +12,24 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="./index.html"><img src="logo.png" alt="Logo"></a>
+            <a href="./index.html"><img src="assets/images/logo.png" alt="Logo"></a>
         </div>
         <div class="nav-items">
-            <a href="/">Home</a> 
-            <a href="./physicalSecurity.html">Physical Security</a> 
-            <a href="./digitalSecurity.html">Digital Security</a> 
+            <a href="/">Home</a>
+            <a href="./physicalSecurity.html">Physical Security</a>
+            <a href="./digitalSecurity.html">Digital Security</a>
             <a href="./communications.html">Communications</a>
+            <a href="./about.html">About</a>
         </div>
     </nav>
     <section class="hero">
         <div class="hero-container">
             <div class="column-left">
                 <div class="slider-container">
+                    <h1>Digital Security</h1>
+
                     <div class="slider">
                         <div class="slide">
-                            <h1>Digital Security</h1>
                             <h2>Password Security</h2>
                             <p>In this section discusses the importance of password security and recommends the use of a password manager. They also highlight the benefits of using an authenticator app for two-factor authentication.</p>
                             <h3>Highlights</h3>
@@ -109,12 +111,36 @@
             </div>
             <div class="column-right">
                 <a href="./digitalSecurity" title="Digital Security">
-                    <img src="./digital.png" alt="illustration" class="hero-image"/>
+                    <img src="assets/images/digital.png" alt="illustration" class="hero-image"/>
                 </a>
             </div>
         </div>
     </section>
 
     <script src="slider.js" defer></script>
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="social-media-links">
+                    <a href="https://www.facebook.com" target="_blank">
+                        <img src="assets/social/facebook.svg" alt="Facebook">
+                    </a>
+                    <a href="https://www.twitter.com" target="_blank">
+                        <img src="assets/social/twitter.png" alt="Twitter">
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank">
+                        <img src="assets/social/instagram.svg" alt="Instagram">
+                    </a>
+                    <a href="https://www.youtube.com" target="_blank">
+                        <img src="assets/social/youtube.svg" alt="YouTube">
+                    </a>
+                    <a href="https://www.linkedin.com" target="_blank">
+                        <img src="assets/social/linkedin.svg" alt="LinkedIn">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
