--- a/physicalSecurity.html
+++ b/physicalSecurity.html
@@ -12,13 +12,14 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="./index.html"><img src="logo.png" alt="Logo"></a>
+            <a href="./index.html"><img src="assets/images/logo.png" alt="Logo"></a>
         </div>
         <div class="nav-items">
             <a href="/">Home</a>
             <a href="./physicalSecurity.html">Physical Security</a>
             <a href="./digitalSecurity.html">Digital Security</a>
             <a href="./communications.html">Communications</a>
+            <a href="./about.html">About</a>
         </div>
     </nav>
     <section class="hero">
@@ -71,8 +72,8 @@
                                 Consider your threat model and never give away a device without wiping it clean.</p>
                             <h3><strong>Highlights</strong></h3>
                             <ul>
-                                <li><strong>📱 Wiping your device:</strong> Wiping your device is important to protect your data when trading, recycling, or giving it away. Attackers can easily access your personal information from old devices.</li>
-                                <li><strong>↻ Disconnecting your account and doing a factory reset:</strong> Disconnecting your account and doing a factory reset is essential. Hard drives can be destroyed or wiped using tools. Consider your threat model and never give away a device without wiping it clean.</li>
+                                <li><strong>📵 Wiping your device:</strong> Wiping your device is important to protect your data when trading, recycling, or giving it away. Attackers can easily access your personal information from old devices.</li>
+                                <li><strong>📴 Disconnecting your account and doing a factory reset:</strong> Disconnecting your account and doing a factory reset is essential. Hard drives can be destroyed or wiped using tools. Consider your threat model and never give away a device without wiping it clean.</li>
                                 <li><strong>🛠️ Hard drives can be destroyed or wiped using tools:</strong> Hard drives can be destroyed or wiped using tools to secure your data.</li>
                                 <li><strong>🤔 Consider your threat model:</strong> Consider your threat model and never give away a device without wiping it clean.</li>
                             </ul>
@@ -88,7 +89,7 @@
                                 <li><strong>🖨️ Securing printers:</strong> Securing printers is crucial to prevent them from being used as an entry point for hackers.</li>
                                 <li><strong>🌐 Internet of Things (IoT) security:</strong> Connecting Internet of Things devices to a secure Wi-Fi network and disabling unnecessary connections can reduce security risks.</li>
                                 <li><strong>💼 Fireproof folder:</strong> Using a fireproof folder is a cost-effective solution for protecting important documents.</li>
-                                <li><strong>💡 Power-saving measures:</strong> Turning off printers when not in use saves electricity and reduces the risk of unauthorized access.</li>
+                                <li><strong>🔋 Power-saving measures:</strong> Turning off printers when not in use saves electricity and reduces the risk of unauthorized access.</li>
                             </ul>
                         </div>
                         <div class="button-container">
@@ -100,13 +101,37 @@
             </div>
             <div class="column-right">
                 <a href="./communications.html" title="Communications">
-                    <img src="./globe.png" alt="illustration" class="hero-image"/>
+                    <img src="assets/images/person.png" alt="illustration" class="hero-image"/>
                 </a>
             </div>
         </div>
         
     </section>
-    
+
     <script src="slider.js" defer></script>
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="social-media-links">
+                    <a href="https://www.facebook.com" target="_blank">
+                        <img src="assets/social/facebook.svg" alt="Facebook">
+                    </a>
+                    <a href="https://www.twitter.com" target="_blank">
+                        <img src="assets/social/twitter.png" alt="Twitter">
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank">
+                        <img src="assets/social/instagram.svg" alt="Instagram">
+                    </a>
+                    <a href="https://www.youtube.com" target="_blank">
+                        <img src="assets/social/youtube.svg" alt="YouTube">
+                    </a>
+                    <a href="https://www.linkedin.com" target="_blank">
+                        <img src="assets/social/linkedin.svg" alt="LinkedIn">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
