Final touches and readme

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             <a href="./index.html"><img src="assets/images/logo.png" alt="Logo"></a>
         </div>
         <div class="nav-items">
-            <a href="/">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./physicalSecurity.html">Physical Security</a>
             <a href="./digitalSecurity.html">Digital Security</a>
             <a href="./communications.html">Communications</a>
@@ -23,9 +23,9 @@
     </nav>
     
     <section class="hero">
+        <h1>About Me</h1>
         <div>
             <div class="about-content">
-                <h2>About Me</h2>
                 <p>I'm a student at Code Institute, currently residing in Ireland. As a passionate learner, I'm constantly seeking ways to enhance my skills and knowledge in various areas of technology. <br>
                     The inspiration to delve into the fundamentals of security came from my desire to understand how to protect digital assets and ensure secure communication practices.<br>
                 This website project is part of my educational journey, where I aim to explore the essentials of security, including physical and digital security measures, as well as secure communication practices.</p>
