--- a/communications.html
+++ b/communications.html
@@ -15,7 +15,7 @@
             <a href="./index.html"><img src="./assets/images/logo.png" alt="Logo"></a>
         </div>
         <div class="nav-items">
-            <a href="/">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./physicalSecurity.html">Physical Security</a>
             <a href="./digitalSecurity.html">Digital Security</a>
             <a href="./communications.html">Communications</a>
@@ -23,9 +23,9 @@
         </div>
     </nav> 
     <section class="hero">
+        <h1>Communications Security</h1>
         <div class="hero-container">
             <div class="column-left">
-                <h1>Communications Security</h1>
                 <div class="slider-container">
                     <div class="slider">
                         <div class="slide">
