--- a/digitalSecurity.html
+++ b/digitalSecurity.html
@@ -15,7 +15,7 @@
             <a href="./index.html"><img src="assets/images/logo.png" alt="Logo"></a>
         </div>
         <div class="nav-items">
-            <a href="/">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./physicalSecurity.html">Physical Security</a>
             <a href="./digitalSecurity.html">Digital Security</a>
             <a href="./communications.html">Communications</a>
@@ -23,11 +23,10 @@
         </div>
     </nav>
     <section class="hero">
+        <h1>Digital Security</h1>
         <div class="hero-container">
             <div class="column-left">
                 <div class="slider-container">
-                    <h1>Digital Security</h1>
-
                     <div class="slider">
                         <div class="slide">
                             <h2>Password Security</h2>
