--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="./index.html"><img src="assets/images/logo.png" alt="Logo"></a>
         </div>
         <div class="nav-items">
-          <a href="/">Home</a>
+          <a href="./index.html">Home</a>
           <a href="./physicalSecurity.html">Physical Security</a>
           <a href="./digitalSecurity.html">Digital Security</a>
           <a href="./communications.html">Communications</a>
