--- a/physicalSecurity.html
+++ b/physicalSecurity.html
@@ -15,17 +15,18 @@
             <a href="./index.html"><img src="assets/images/logo.png" alt="Logo"></a>
         </div>
         <div class="nav-items">
-            <a href="/">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./physicalSecurity.html">Physical Security</a>
             <a href="./digitalSecurity.html">Digital Security</a>
             <a href="./communications.html">Communications</a>
             <a href="./about.html">About</a>
         </div>
     </nav>
+
     <section class="hero">
+        <h1>Physical Security</h1>
         <div class="hero-container">
             <div class="column-left">
-                <h1>Physical Security</h1>
                 <div class="slider-container">
                     <div class="slider">
                         <div class="slide">
