small change after HTML validator

--- a/communications.html
+++ b/communications.html
@@ -75,7 +75,7 @@
             </div>
             <div class="column-right">
                 <a href="./communications.html" title="Communications">
-                    <img src="assets/images/globe.png" alt="illustration" class="hero-image"/>
+                    <img src="assets/images/globe.png" alt="illustration" class="hero-image">
                 </a>            
             </div>
         </div>
