--- a/digitalSecurity.html
+++ b/digitalSecurity.html
@@ -110,7 +110,7 @@
             </div>
             <div class="column-right">
                 <a href="./digitalSecurity" title="Digital Security">
-                    <img src="assets/images/digital.png" alt="illustration" class="hero-image"/>
+                    <img src="assets/images/digital.png" alt="illustration" class="hero-image">
                 </a>
             </div>
         </div>
