--- a/physicalSecurity.html
+++ b/physicalSecurity.html
@@ -102,7 +102,7 @@
             </div>
             <div class="column-right">
                 <a href="./communications.html" title="Communications">
-                    <img src="assets/images/person.png" alt="illustration" class="hero-image"/>
+                    <img src="assets/images/person.png" alt="illustration" class="hero-image">
                 </a>
             </div>
         </div>
